# gh-insights

./: .ci_ping  README.md  pyproject.toml
.github/workflows/: ci-pr.yml  ci.yml
src/gh_insights/: __main__.py  api.py
tests/: conftest.py  test_api.py  test_cli.py  test_langs.py
