[tool.poetry]
name = "gh-insights"
version = "0.1.0"
description = "CLI para insights rápidos de la API de GitHub (Poetry + pre-commit + CI/CD)"
authors = ["CoderDeltaLAN <coderdeltalan@gmail.com>"]
readme = "README.md"
# MUY IMPORTANTE: apuntar al paquete correcto en src/
packages = [{ include = "gh_insights", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
respx = "^0.22.0"
black = "^24.10.0"
ruff = "^0.5.7"
mypy = "^1.17.1"
pre-commit = "^3.8.0"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

