[tool.poetry]
name = "gh-insights"
version = "0.1.0"
description = "CLI para explorar repositorios y lenguajes de GitHub desde la terminal."
authors = ["CoderDeltaLAN <tu-email@ejemplo.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gh_insights", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
respx = "^0.22.0"
black = "^24.10.0"
ruff = "^0.5.7"
mypy = "^1.17.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
